# nanokit-rs

./: .gitignore  CONTRIBUTING.MD  Cargo.toml  README-DEV.MD  README.MD  build.rs
.github/: changelog.hbs  dependabot.yml  pull_request_template.md  template-version.txt
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: auto-changelog.yml  rust.yml
benches/my_benchmark/: main.rs
src/: .gitignore  AGENTS.md  Cargo.toml  count_bits.rs  exports.rs  lib.rs  string_concat.rs  string_concat_unsafe.rs
src/nanokit/: Cargo.toml  README.MD
src/nanokit/benches/my_benchmark/: main.rs
src/nanokit/src/: count_bits.rs  lib.rs  string_concat.rs  string_concat_unsafe.rs
