[package]
name = "nanokit"
version = "0.2.1"
edition = "2021"
description = "A collection of tiny, reusable utility methods that reduce code size and improve performance."
repository = "https://github.com/Sewer56/nanokit-rs"
license-file = "../../LICENSE"
readme = "../../README.MD"
include = ["src/**/*"]

[features]
default = ["std"]
std = []
# Use this for measuring code size
c-exports = []
# Prevents inlining of concat functions.
no-inline-concat = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.8.1"
rstest = "0.26.1"

[target.'cfg(all(any(target_os = "linux", target_os = "macos"), any(target_arch = "x86", target_arch = "x86_64", target_arch = "aarch64")))'.dev-dependencies]
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

# Benchmark Stuff
[[bench]]
name = "my_benchmark"
path = "benches/my_benchmark/main.rs"
harness = false
